NYCHHC/gitops/manifests/71-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nychhc-frontend
  namespace: nychhc-demo
  labels:
    app: nychhc-frontend
    demo: nychhc
spec:
  selector:
    app: nychhc-frontend
  ports:
    - name: http
      port: 8501
      targetPort: 8501
